major frontend revamp

--- a/config.json
+++ b/config.json
@@ -2,18 +2,21 @@
   "student": {
     "name": "Your Name",
     "bio": "Google Summer of Code Contributor",
-    "avatar": "https://github.com/YOUR-USERNAME.png",
-    "github": "https://github.com/YOUR-USERNAME",
+    "avatar": "https://github.com/yourusername.png",
+    "github": "https://github.com/yourusername",
     "email": "your.email@example.com",
     "blog": "https://yourblog.dev",
-    "linkedin": "https://linkedin.com/in/YOUR-PROFILE"
+    "linkedin": "https://linkedin.com/in/yourprofile"
   },
   "project": {
     "title": "Your GSoC Project Title",
     "description": "A brief description of your GSoC project and what you're working on. Explain the problem you're solving and the impact of your work.",
-    "organization": "Your Organization Name",
+    "organization": "Your Organization",
     "timeline": "May 2024 - August 2024",
-    "repository": "https://github.com/ORG/REPO"
+    "repositories": [
+      "https://github.com/YourOrg/Repository-1",
+      "https://github.com/YourOrg/Repository-2"
+    ]
   },
   "slack": {
     "workspaceUrl": "https://your-org.slack.com/join/shared_invite/xxx",
@@ -22,12 +25,5 @@
       "gsoc-2024",
       "your-project-channel"
     ]
-  },
-  "mentor": {
-    "name": "Mentor Name",
-    "email": "mentor@example.com",
-    "avatar": "https://github.com/MENTOR-USERNAME.png",
-    "role": "Project Mentor",
-    "github": "https://github.com/MENTOR-USERNAME"
   }
 }
