--- a/config.example.json
+++ b/config.example.json
@@ -13,7 +13,10 @@
     "description": "Developing a comprehensive security testing dashboard that integrates vulnerability scanning, penetration testing results, and automated security reports. The project aims to make security testing more accessible and actionable for developers.",
     "organization": "OWASP Foundation",
     "timeline": "May 27, 2024 - August 26, 2024",
-    "repository": "https://github.com/OWASP-BLT/BLT"
+    "repositories": [
+      "https://github.com/OWASP-BLT/BLT",
+      "https://github.com/OWASP-BLT/BLT-Flutter"
+    ]
   },
   "slack": {
     "workspaceUrl": "https://owasp.slack.com/join/shared_invite/zt-example123",
@@ -23,28 +26,5 @@
       "blt-development",
       "security-testing"
     ]
-  },
-  "mentors": [
-    {
-      "name": "Dr. Sarah Chen",
-      "email": "sarah.chen@owasp.org",
-      "avatar": "https://github.com/sarahchen.png",
-      "role": "Lead Mentor",
-      "github": "https://github.com/sarahchen"
-    },
-    {
-      "name": "John Doe",
-      "email": "john.doe@owasp.org",
-      "avatar": "https://github.com/johndoe.png",
-      "role": "Co-Mentor",
-      "github": "https://github.com/johndoe"
-    },
-    {
-      "name": "Jane Smith",
-      "email": "jane.smith@owasp.org",
-      "avatar": "https://github.com/janesmith.png",
-      "role": "Co-Mentor",
-      "github": "https://github.com/janesmith"
-    }
-  ]
+  }
 }
